Fix monthly view for data for better alignment and spacing

--- a/public/style.css
+++ b/public/style.css
@@ -229,16 +229,7 @@ html {
 
 .bar {
   background-color: #ffffff;
-  position: relative;
 }
-/*
-.bar span {
-  position: absolute;
-  top: -20px;
-  left: 0;
-  color: #ffffff;
-  text-align: center;
-}*/
 
 .dates {
   display: flex;
@@ -250,6 +241,19 @@ html {
   width: 100%;
   bottom: 0;
   position: absolute;
+}
+
+.monthly .bars {
+  padding: 0 5px;
+  box-sizing: border-box;
+}
+
+.monthly .dates {
+  justify-content: space-between;
+  text-align: left;
+  font-size: 0.8rem;
+  padding: 0 2px;
+  box-sizing: border-box;
 }
 
 /*/////////////////////////////////
